really dealing with BMP280 and not ith BME280

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = d1_mini_lite
+default_envs = d1_mini
 
 [common]
 platform = espressif8266@2.6.2
@@ -20,10 +20,10 @@ build_flags = -Iinclude
               -D PIOFRAMEWORK=\"$PIOFRAMEWORK\"
 
 lib_deps =   
-  Wire
+  Wire~
   SPI
-  Adafruit Unified Sensor@1.1.4
-  Adafruit BME280 Library@2.1.2
+  adafruit/Adafruit Unified Sensor@1.1.4
+  adafruit/Adafruit BMP280 Library @ 2.1.0
   PubSubClient@2.8
 
 monitor_speed = 115200
